--- a/index.html
+++ b/index.html
@@ -11,8 +11,36 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+    <nav class="container-fluid">
+      <div class="row">
+        <div class="col">
+        </div>
+        <div class="col">
+        </div>
+        <div class="col">
+        </div>
+        <div class="col">
+        </div>
+        <div class="col">
+        </div>
+        <div class="col">
+        </div>
+      </div>
+    </nav>
+    <article class="container-fluid">
+      <div class="row">
+        <div class="col-6 left">
+        </div>
+        <div class="col-6 right">
+        </div>
+      </div>
+    </article>
+    <footer class="container-fluid">
+      <div class="row">
+        <div class="col">
+        </div>
+      </div>
+    </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
