--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </nav>
     <article class="container-fluid">
       <div class="row">
-        <div class="col-6 left">
+        <div class="col-12 col-md-6 left">
         </div>
-        <div class="col-6 right">
+        <div class="col-12 col-md-6 right">
         </div>
       </div>
     </article>
