--- a/index.html
+++ b/index.html
@@ -15,18 +15,13 @@
       <div class="row">
         <div class="col">
         </div>
-        <div class="col">
-        </div>
-        <div class="col">
-        </div>
-        <div class="col">
-        </div>
-        <div class="col">
-        </div>
-        <div class="col">
-        </div>
       </div>
     </nav>
+    <div class="jumbotron jumbtron-fluid ">
+      <h1 class="display-3 text-center">Welcome</h1>
+      <hr class="my-4">
+      <p class="lead text-center">This is a collaboration with Cat and Jim</p>
+    </div>
     <article class="container-fluid">
       <div class="row">
         <div class="col-12 col-md-6 left">
